# felt-1

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  package.json  tsconfig.base.json
.agent/: HUMAN_LOG.md  LOG.md
.agent/benchmarks/: backrooms-gpt-imagegen-one-shot-target-aspect-v1.json  backrooms-gpt-imagegen-one-shot-v1.json  backrooms-greenhouse-3x3-local-v1.json  backrooms-greenhouse-3x3-mock-v1.json  backrooms-greenhouse-3x3-mock-v2.json  backrooms-http-codex-probe-local-v2.json  backrooms-image-artifactgrid-v1.json  backrooms-image-filtergrid-v1.json  backrooms-image-hardneutral-finegrid-v1.json  backrooms-image-sharpgrid-v1.json  backrooms-image-to-image-aspect-pop3-v1.json  backrooms-image-to-image-aspect-refine2-v1.json  backrooms-image-to-image-crisp-warm-v1.json  backrooms-image-to-image-fidelity-pop3-v1.json  backrooms-image-to-image-fidelity-v1.json  backrooms-image-to-image-flowers-local-v1.json  backrooms-image-to-image-flowers-replacement-direct-v1.json  backrooms-image-to-image-flux-v1.json  (+42 more)
docs/: ARCHITECTURE.md  AUDIO_INPUT.md  IO_MODULES.md  ISONEURAL_CONVERTER.md  MVP_AUDIO_INPUT.md  MVP_IMAGE_TO_TEXT.md
experiments/exp-1/: .gitignore  README.md  pyproject.toml
experiments/exp-1/results/: FINDINGS.md  report.json  report.md  sweep.csv
experiments/exp-1/scripts/: 01_generate_pairs.py  02_encode.py  03_run_metrics.py  04_sweep.py  05_modality_probe.py  06_all_subsets.py  _selftest_metrics.py  pair_specs.py
experiments/exp-1/src/vibe/: config.py  deepseek.py  flux.py  masks.py  metrics.py  tribe.py
scripts/: setup-tribe.sh
(+74 files in other folders)
